[package]
name = "hmc5883-async"
version = "0.1.4"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>","Aïssata Maiga <aimaiga2@gmail.com>", "Henrik Alsér <henrik.alser@me.com>"]
edition = "2018"
description = "HMC5883 magnetometer async driver for embedded hal"
license = "BSD-3-Clause"
repository = "https://github.com/Dajamante/hmc5983-async"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
    "async"
]
keywords = [
    "embedded-hal-driver",
    "async",
    "HMC5883",
    "magnetometer"
]
readme = "README.md"
exclude = [
    ".cargo_vcs_info.json"
]

[dependencies]
embedded-hal = "1.0.0"
defmt = { version = "0.3.2", optional = true }
embedded-hal-async = { version = "1.0.0", optional = true }
panic-rtt-core = { version = "0.2.1", optional = true }
maybe-async-cfg = "0.2.3"

[features]
default = ["async"]
rttdebug = ["dep:panic-rtt-core"]
defmt = ["dep:defmt"]
sync = []
async = ["dep:embedded-hal-async"]

